	* Added a 'TIMEZONE' command to the receive command protocol.
	* Modified gncd(8) to update the local timezone to match the
	management system.
2022-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.6.
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--startup-delay- switch to gncd(8).
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	*Instrumented the 'TimeEngine' class in gncd(8).
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.7.
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Site:' dropdown to the 'List Events' dialog in gnmc(1).
2025-04-09 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up compiler warnings in gncd(8).
	* Cleaned up compiler warnings in gnmc(8).
2025-04-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the Qt5 dependency to Qt6.
2025-04-10 Fred Gleason <fredg@paravelsystems.com>
	* Added '--disable-gncd', '--disable-gnmc' and '--disable-gnmd'
	switches to the 'configure' script.
2025-04-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Disabled the 'overloaded-virtual' compiler warning. (See
	discussion at https://gcc.gnu.org/bugzilla/show_bug.cgi?id=109740
	for rationale).
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.0.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the 'glassgui-receiver' DEB package that caused
	it to be assigned an arch value of 'all'.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Added code to initialize glassnet.conf(5) to the 'glassnet-mgmnt'
	and 'glassnet-server' DEB packages.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Change the QSQLDatabase driver from 'QMYSQL3' to 'QMYSQL'.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Added code to initialize gncd.conf(5) to the 'glassnet-receiver'
	DEB package.