@@ -1,0 +1,27 @@
+#!/bin/sh
+# postinst script for glassnet-mgmnt
+
+case "$1" in
+    configure)
+	if [ ! -f /etc/glassnet.conf ] ; then
+	    if [ -f /usr/lib/glassnet-mgmnt/glassnet-sample.conf ] ; then
+		cp /usr/lib/glassnet-mgmnt/glassnet-sample.conf /etc/glassnet.conf
+	    fi
+	fi
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
