@@ -1,0 +1,34 @@
+#!/bin/sh
+# postinst script for glassnet-receiver
+
+case "$1" in
+    configure)
+	if [ ! -f /etc/gncd.conf ] ; then
+	    if [ -f /usr/lib/glassnet-receiver/gncd-sample.conf ] ; then
+		cp /usr/lib/glassnet-receiver/gncd-sample.conf /etc/gncd.conf
+	    fi
+	fi
+	if [ -x /bin/systemctl ] ; then
+	    /bin/systemctl daemon-reload
+	    if [ -f /usr/lib/systemd/system/gncd.service ] ; then
+		/bin/systemctl start gncd.service
+		/bin/systemctl enable gncd.service
+	    fi
+	fi
+    ;;
+
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
