@@ -20,10 +20,6 @@ set -e
 case "$1" in
     remove|upgrade|deconfigure)
 	if [ -x /bin/systemctl ] ; then
-	    if [ -f /usr/lib/systemd/system/gncd.service ] ; then
-		/bin/systemctl stop gncd.service
-		/bin/systemctl disable gncd.service
-	    fi
 	    if [ -f /usr/lib/systemd/system/gnmd.service ] ; then
 		/bin/systemctl stop gnmd.service
 		/bin/systemctl disable gnmd.service
