@@ -359,3 +359,6 @@
 2025-04-18 Fred Gleason <fredg@paravelsystems.com>
 	* Added code to initialize gncd.conf(5) to the 'glassnet-receiver'
 	DEB package.
+2025-04-18 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed bugs that cause package scripts to fail to be included
+	correctly in DEB packages.
